# llm-production-telemetry

./: .coverage  .gitignore  .pre-commit-config.yaml  CASE_STUDY.md  CHANGELOG.md  LLM_Production_Telemetry.ipynb  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/sample/: llm_system_interactions.csv  llm_system_sessions_summary.csv  llm_system_users_summary.csv
docs/: outputs.md  schema.md
scripts/: generate_sample_data.py  run_notebook.py  validate_data.py
tests/: test_generate_sample_data.py  test_run_notebook.py  test_validate_data.py
